--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ html {
 	line-height: 1.4;
 }
 body {
-	max-width: calc(100% - 12rem);
-	margin: 0 auto 10rem;
+	width: 80vw;
+	min-width: 600px
+	margin: 5vw auto;
 }
 </html>
