redone with stylesheet

--- a/index.html
+++ b/index.html
@@ -3,33 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<title>Miles Martin | Hello</title>
-	<meta name="description" content="Personal website for Miles Martin">
+	<meta name="description" content="Personal website for Miles Z. Martin">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="icon.png">
+	<link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAMAAABFaP0WAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRFPLNxAAAAUjvLJAAAAA5JREFUeNpiYAABgAADAAAGAAHgQhFOAAAAAElFTkSuQmCC">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Hello</h1>
-	<p>Please be patient while I set up this website.</p>
+	<h1>Hello!</h1>
+	<p>My name is Miles Martin. Some of the things I care most about are cities, LGBTQ+ empowerment, environmental justice, transit, bikes, housing, community investment, and digital communications. Currently, I work to communicate poverty-focused research <a href="https://mcsilver.nyu.edu/bio/miles-martin/">at the McSilver Institute</a>. I have a Master of Urban Planning from NYU Wagner (2020) and a BFA from Boston University. I grew up in South Carolina, and now I live in Brooklyn, NY with my partner and <a href="https://www.instagram.com/explore/tags/sessamess/">my cat</a>.</p>
+	<p>Please <a href="mailto:hi@miles.nyc">email me</a> about anything.</p>
+	<h1>A few links</h1>
+	<p><i data-feather="file-plus"></i> <a href="/miles_martin.pdf">my resume (PDF)</a></p>
+	<p><i data-feather="file-text"></i> <a href="/resume">my resume (text only)</a></p>
+	<p><i data-feather="linkedin"></i> <a href="https://www.linkedin.com/in/milesm/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BqTTmaBk6TKeczhWqe0VjtQ%3D%3D">my LinkedIn</a></p>
+	<p><i data-feather="send"></i> <a href="mailto:hi@miles.nyc">hi@miles.nyc</a></p>
 </body>
-<style>
-* {
-	border: 0;
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	color: inherit;
-	font-family: inherit;
-	font-size: inherit;
-}
-html {
-	background-color: white;
-	color: dimgrey;
-	font-size: 14px;
-	line-height: 1.4;
-}
-body {
-	width: 80vw;
-	min-width: 600px;
-	margin: 5vw auto;
-}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js" integrity="sha512-7x3zila4t2qNycrtZ31HO0NnJr8kg2VI67YLoRSyi9hGhRN66FHYWr7Axa9Y1J9tGYHVBPqIjSE1ogHrJTz51g==" crossorigin="anonymous"></script>
+<script>feather.replace()</script>
 </html>
