--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<h1>Hello!</h1>
-	<p>My name is Miles Martin. Some of the things I care most about are cities, LGBTQ+ empowerment, environmental justice, transit, bikes, housing, community investment, and digital communications. Currently, I work to communicate poverty-focused research <a href="https://mcsilver.nyu.edu/bio/miles-martin/">at the McSilver Institute</a>. I have a Master of Urban Planning from NYU Wagner (2020) and a BFA from Boston University. I grew up in South Carolina, and now I live in Brooklyn, NY with my partner and <a href="https://www.instagram.com/explore/tags/sessamess/">my cat</a>.</p>
+	<p>My name is Miles Martin. Some of the things I care about most are cities, LGBTQ+ empowerment, environmental justice, transit, bikes, housing, community investment, and digital communications. Currently, I work to communicate poverty-focused research <a href="https://mcsilver.nyu.edu/bio/miles-martin/">at the McSilver Institute</a>. I have a Master of Urban Planning from NYU Wagner (2020) and a BFA from Boston University. I grew up in South Carolina, and now I live in Brooklyn, NY with my partner and <a href="https://www.instagram.com/explore/tags/sessamess/">my cat</a>.</p>
 	<p>Please <a href="mailto:hi@miles.nyc">email me</a> about anything.</p>
 	<h1>A few links</h1>
 	<p><i data-feather="file-plus"></i> <a href="/miles_martin.pdf">my resume (PDF)</a></p>
