--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Hello!</h1>
-	<p>My name is Miles Martin. Some of the topics I care about and study are cities, queer liberation, environmental justice, transit, bikes, housing, community investment, and digital communications. Currently, I work to communicate poverty-focused research <a href="https://mcsilver.nyu.edu/bio/miles-martin/">at the McSilver Institute</a>. I have a Master of Urban Planning from NYU Wagner (2020) and a BFA from Boston University. I grew up in South Carolina, and now I live in Brooklyn, NY with my partner and <a href="https://www.instagram.com/explore/tags/sessamess/">my cat</a>.</p>
+	<h1>Hello</h1>
+	<p>My name is Miles Martin. My work and studies has typically focused on sustainable urbanism, digital media, and social justice. I’m especially interested in using innovative tools to find new or overlooked ways that urban development can meet multiple aims: how do housing, transit, and civic life impact social equity, cohesion, efficiency, and resilience? Currently, I work to communicate poverty-focused research <a href="https://mcsilver.nyu.edu/bio/miles-martin/">at the McSilver Institute</a>. In 2020, I received a Master of Urban Planning from NYU Wagner Graduate School of Public Service, I have and a BFA from Boston University. I grew up in South Carolina and now live in Brooklyn, NY with my partner and <a href="https://www.instagram.com/explore/tags/sessamess/">my cat</a>.</p>
 	<p>Please <a href="mailto:hi@miles.nyc">email me</a> about anything.</p>
-	<h1>A few links</h1>
-	<p><i data-feather="file-plus"></i> <a href="/miles_martin.pdf">my resume (PDF)</a></p>
-	<!-- <p><i data-feather="file-text"></i> <a href="/resume">my resume (text only)</a></p> -->
+	<h1>Links</h1>
+	<p><i data-feather="file-plus"></i> <a href="/miles_martin.pdf">Resume (PDF)</a></p>
 	<p><i data-feather="linkedin"></i> <a href="https://www.linkedin.com/in/milesm/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BqTTmaBk6TKeczhWqe0VjtQ%3D%3D">my LinkedIn</a></p>
 	<p><i data-feather="send"></i> <a href="mailto:hi@miles.nyc">hi@miles.nyc</a></p>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js" integrity="sha512-7x3zila4t2qNycrtZ31HO0NnJr8kg2VI67YLoRSyi9hGhRN66FHYWr7Axa9Y1J9tGYHVBPqIjSE1ogHrJTz51g==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" integrity="sha512-24XP4a9KVoIinPFUbcnjIjAjtS59PUoxQj3GNVpWc86bCqPuy3YxAcxJrxFCxXe4GHtAumCbO2Ze2bddtuxaRw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>feather.replace()</script>
 </html>
