--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<p>Please <a href="mailto:hi@miles.nyc">email me</a> about anything.</p>
 	<h1>Links</h1>
 	<p><i data-feather="file-plus"></i> <a href="/miles_martin.pdf">Resume (PDF)</a></p>
-	<p><i data-feather="linkedin"></i> <a href="https://www.linkedin.com/in/milesm/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BqTTmaBk6TKeczhWqe0VjtQ%3D%3D">my LinkedIn</a></p>
+	<p><i data-feather="linkedin"></i> <a href="https://www.linkedin.com/in/milesm/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BqTTmaBk6TKeczhWqe0VjtQ%3D%3D">LinkedIn profile</a></p>
 	<p><i data-feather="send"></i> <a href="mailto:hi@miles.nyc">hi@miles.nyc</a></p>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" integrity="sha512-24XP4a9KVoIinPFUbcnjIjAjtS59PUoxQj3GNVpWc86bCqPuy3YxAcxJrxFCxXe4GHtAumCbO2Ze2bddtuxaRw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
