--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<p>My name is Miles Martin. My work and studies typically addressed on sustainable urbanism, digital media, and social justice. I’m especially interested in using innovative tools to find new or overlooked ways that urban development can meet multiple aims: how do housing, transit, and civic life impact social equity, cohesion, efficiency, and resilience? Currently, I work to communicate poverty-focused research <a href="https://mcsilver.nyu.edu/bio/miles-martin/">at the McSilver Institute</a>. In 2020, I received a Master of Urban Planning from NYU Wagner Graduate School of Public Service, and I have a BFA from Boston University. I grew up in South Carolina and now live in Brooklyn, NY with my partner and <a href="https://www.instagram.com/explore/tags/sessamess/">a little black cat</a>.</p>
 	<p>Please <a href="mailto:hi@miles.nyc">email me</a> about anything.</p>
 	<h1>Links</h1>
-	<p><i data-feather="file-plus"></i> <a href="/miles_martin.pdf">Resume (PDF)</a></p>
+	<p><i data-feather="file-plus"></i> <a href="/miles-martin.pdf">Resume (PDF)</a></p>
 	<p><i data-feather="linkedin"></i> <a href="https://www.linkedin.com/in/milesm/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BqTTmaBk6TKeczhWqe0VjtQ%3D%3D">LinkedIn profile</a></p>
 	<p><i data-feather="send"></i> <a href="mailto:hi@miles.nyc">hi@miles.nyc</a></p>
 </body>
