--- a/vgp.html
+++ b/vgp.html
@@ -7,7 +7,7 @@
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body style="background:white;width:100%;height:100%;margin:0;padding:1em">
 <main><table class="m_6434576591245050105wallet" role="presentation" style="margin:0 auto;max-width:calc(550px - 1rem);font-family:'Gotham SSm A','Gotham SSm B',Helvetica,Arial,sans-serif;color:#333">
 	<tbody>
 		<tr>
