change date format

--- a/vgp.html
+++ b/vgp.html
@@ -58,7 +58,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 <script>window.onload = function(){
 	var date = moment();
-var currentDate = date.format("DD MMM YYYY");
+var currentDate = date.format("D MMM YYYY");
 document.getElementById('updateDate').innerHTML = currentDate;
 };</script>
   </body>
